// Test Documentation
syntax = "proto3";
package grpc;

// Heartbeat
service RpcService {
    // Common Interfaces
    rpc isReady (ReadyRequest) returns (ReadyResponse);
}

// Ready request object
message ReadyRequest {
    // No arguments
}

// Ready response object
message ReadyResponse {

    // True if ready
    bool ready = 1;
}
